--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "server",
   "version": "0.0.0",
   "engines": {
-    "node": "15.12.0"
+    "node": "15.x"
   }
   "private": true,
   "scripts": {
