--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.1.6",
     "express": "^4.16.4",
+    "fs": "0.0.1-security",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "mongoose": "^5.12.3",
     "morgan": "~1.9.1",
-    "node": "^15.12.0"
+    "multer": "^1.4.2",
+    "node": "^15.12.0",
+    "path": "^0.12.7"
   }
 }
